decoupled to several views

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -59,7 +59,13 @@
     <div id="nav-container" style="height: 100%; width: 100%;">
 
     </div>
-    <script type="text/javascript" src="js/nav-container.js"></script>
+    <script type="text/javascript" src="js/pages/menu-panel-view.js"></script>
+    <script type="text/javascript" src="js/pages/header-view.js"></script>
+    <script type="text/javascript" src="js/pages/how-to-find-view.js"></script>
+    <script type="text/javascript" src="js/pages/topics-view.js"></script>
+    <script type="text/javascript" src="js/pages/footer-view.js"></script>
+    <script type="text/javascript" src="js/pages/register-view.js"></script>
+    <script type="text/javascript" src="js/pages/application-view.js"></script>
 
 
     <!-- Services Section -->
