--- a/src/client/index.html
+++ b/src/client/index.html
@@ -41,7 +41,7 @@
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
 
